# whyvec

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  SECURITY.md
.agents/plugins/: marketplace.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  compiler_case.yml  config.yml
.github/workflows/: repository-integrity.yml
containers/judge/: Dockerfile  build.sh
crates/whyvec-build/: Cargo.toml
crates/whyvec-build/src/: analyzer.rs  diagnostics.rs  git.rs  lib.rs  process.rs  syntax.rs
crates/whyvec-cli/: Cargo.toml
crates/whyvec-cli/src/: main.rs
crates/whyvec-domain/: AGENTS.md  Cargo.toml
crates/whyvec-domain/src/: lib.rs
crates/whyvec-experiment/: Cargo.toml
crates/whyvec-experiment/src/: artifacts.rs  lib.rs  process.rs
crates/whyvec-obligation/: Cargo.toml
crates/whyvec-obligation/src/: lib.rs
crates/whyvec-opt/: Cargo.toml
crates/whyvec-opt/src/: compilation.rs  gcc.rs  lib.rs  remarks.rs
demo/: CMakeLists.txt  README.md  codex-ledger.schema.json
demo/codex-generated/: kernel.c
demo/include/: whyvec_demo.h
demo/src/: ffi.c  kernel.c  refusal.c
demo/tests/: benchmark.c  test_differential.c  test_kernel.c
demo/tools/: analyze_benchmark.py  assert_opt_records.py  validate.py
docs/: AGENT_CONTRACT.md  ARCHITECTURE.md  BUILD_CAUSALITY.md  BUILD_WEEK.md  DECLINE_CODES.md  DEMO_SPEC.md  EXPERIMENT_PROTOCOL.md  GUARDED_REPAIR_VALIDATION.md  PRODUCT_SPEC.md  R3_R8_COMPLETION_AUDIT.md  REFOUNDATION_AUDIT.md  REPORT_CONTRACT.md  RISK_REGISTER.md  SEMANTIC_MODEL.md  TEST_STRATEGY.md  THREAT_MODEL.md
docs/decisions/: 0001-rust-deterministic-core.md  0002-counterfactual-evidence-not-diagnostic-rewrite.md  0003-source-read-only-shadow-ir.md  0004-codex-as-repository-decision-layer.md  0005-causal-compiler-debugger.md  0006-clang-ast-obligation-model.md
docs/phases/: 00-foundation.md  01-baseline-analysis.md  02-counterfactual-search.md  03-obligation-derivation.md  04-agent-workflow.md  05-validation-benchmarking.md  06-product-hardening.md  07-expansion.md  README.md
evidence/codex-action/2026-07-21/: README.md  replay.json
evidence/codex-action/2026-07-21/action/: trace.json
evidence/codex-action/2026-07-21/repository/.whyvec/analyses/wv_57e62f4f87b35ec273f99f2c/: report.json
evidence/codex-action/2026-07-21/repository/.whyvec/analyses/wv_9890a0a53ede03800e257728/: report.json
evidence/codex-action/2026-07-21/repository/already-vectorized/: case.md  kernel.c
evidence/codex-action/2026-07-21/repository/ambiguous-loop/: case.md  kernel.c
evidence/codex-action/2026-07-21/repository/bound-alias/: count_noalias.c
evidence/codex-action/2026-07-21/repository/bound-alias-repair/: action_harness.c  benchmark.c  case.md
evidence/codex-action/2026-07-21/repository/cpp-bound-alias/: case.md
evidence/codex-action/2026-07-21/repository/cpp-template-bound/: case.md  kernel.cpp
evidence/codex-action/2026-07-21/repository/refusal/: volatile_bound.c
evidence/codex-action/2026-07-21/tools/: whyvec-llvm-loop-identity  whyvec-llvm-transform
evidence/codex-action/2026-07-21/validation/: report.json
evidence/codex-action/2026-07-21/validation/benchmark/: raw.json  summary.json
evidence/codex-action/2026-07-21/validation/checks/: differential.json
evidence/codex-action/2026-07-21/validation/compiler/: optimization.opt.yaml  remarks.txt
evidence/codex-live/2026-07-21/: README.md  action-trace.json  ledger.json  patch.diff  prompt.txt  session.jsonl  validation-report.json
evidence/guarded-bound-alias/2026-07-21/: environment.json  report.json
evidence/guarded-bound-alias/2026-07-21/benchmark/: raw.json  summary.json
evidence/guarded-bound-alias/2026-07-21/checks/: differential.json
evidence/guarded-bound-alias/2026-07-21/compiler/: optimization.opt.yaml  remarks.txt
evidence/real-world/superlu-a9314310/: analysis-report.json  result.json
fixtures/: README.md  manifest.json
fixtures/cases/bound-alias/: case.md  kernel.c
fixtures/cases/bound-alias-repair/: abi_harness.c  action_benchmark.c  candidate.c  case.md  guarded.c  harness.c  original.c  production_harness.c
fixtures/cases/cpp-bound-alias/: count_noalias.cpp  kernel.cpp
fixtures/cases/cpp-macro-ambiguous/: case.md  kernel.cpp
fixtures/cases/cpp-template-bound/: count_noalias.cpp
fixtures/cases/refusal/: case.md
fixtures/cases/rust-bound-alias/: case.md  kernel.rs
integrations/codex/whyvec/.codex-plugin/: plugin.json
integrations/codex/whyvec/skills/whyvec-optimize/: SKILL.md
integrations/codex/whyvec/skills/whyvec-optimize/agents/: openai.yaml
integrations/codex/whyvec/skills/whyvec-optimize/references/: action-trace.md  repair-policy.md  report-reading.md
integrations/codex/whyvec/skills/whyvec-optimize/scripts/: plan_action.py
logs/: README.md  benchmarks.md  build.md  experiments.md  failures.md  model-usage.md  releases.md  security.md  validation.md
schemas/: fixture-manifest.schema.json  whyvec-agent-packet.schema.json  whyvec-agent-trace.schema.json  whyvec-build-report.schema.json  whyvec-config.schema.json  whyvec-gcc-observation-report.schema.json  whyvec-obligation-report.schema.json  whyvec-optimization-report.schema.json  whyvec-report.schema.json  whyvec-validation-report.schema.json
scripts/: build_helpers.py  check_portable_evidence.py  demo  sanitize_codex_session.py  validate_repository.py  verify_build_causality.py  verify_clang_fixtures.py  verify_compiler_fixtures.py  verify_cross_adapter_build_causality.py  verify_demo_mutations.py  verify_guarded_repair.py  verify_llvm_loop_identity.py  verify_llvm_transformer.py  verify_optimization_causality.py  verify_real_world_superlu.py
toolchains/clang-21/: profile.json
toolchains/rustc-1.96/: profile.json
tools/: whyvec-llvm-loop-identity.cpp  whyvec-llvm-transform.cpp
tools/typescript-adapter/: diagnostics.mjs  package-lock.json  package.json
(+29 files in other folders)
