[workspace]
members = [
    "crates/whyvec-build",
    "crates/whyvec-cli",
    "crates/whyvec-domain",
    "crates/whyvec-experiment",
    "crates/whyvec-opt",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/Arshgill01/whyvec"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
proc-macro2 = { version = "1.0.107", features = ["span-locations"] }
syn = { version = "3.0.2", features = ["full", "visit"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
