[package]
name = "whyvec-obligation"
description = "Typed source access summaries and enforceable obligation derivation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
whyvec-experiment = { path = "../whyvec-experiment" }
whyvec-opt = { path = "../whyvec-opt" }

[lints]
workspace = true
