[package]
name = "whyvec-opt"
description = "LLVM optimization-causality adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
whyvec-domain = { path = "../whyvec-domain" }
whyvec-experiment = { path = "../whyvec-experiment" }

[lints]
workspace = true
